messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
    spec:
      containers:
      - name: django-messaging-container
        image: your-django-image:2.0  # Change to your actual image
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
